# bcord-infra

./: .env.sample  .gitattributes  .gitignore  AGENTS.md  Caddyfile  README.md  caddy-root.crt  config.json  cookies.txt  deploy-backend.sh  deploy-infra.sh  deploy.sh  docker-compose.override.yml  docker-compose.override.yml.disabled  docker-compose.yml  docker-compose.yml.backup  index.html  package-lock.json  root.crt
app/: CMakeLists.txt  Dockerfile
app/server/src/: main.cpp  main2.cpp
bcord-client/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
bcord-client/src/: App.jsx  api.js  index.css
bcord-client/src/components/: LoginForm.jsx  RegisterForm.jsx  VerifyForm.jsx
bcord-client/src/hooks/: useTokenRefresher.js
caddy/: Dockerfile  config.json  index.html
db/: 001_init.sql  002_presence.sql
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana_dashboards/: bcord_system_overview.json  redis_performance.json
opencaptcha/: .codecov.yml  .editorconfig  .gitignore  Captcha.WebApi.sln  README.md
opencaptcha/.github/workflows/: dotnet.yml  opencaptcha.yml
opencaptcha/src/Captcha.Core/: Captcha.Core.csproj  Constants.cs
opencaptcha/src/Captcha.Core/Mappers/: RequestToDomainMapper.cs
opencaptcha/src/Captcha.Core/Models/: CaptchaConfigurationData.cs  ErrorModel.cs  GetCreateCaptchaRequest.cs  PostCreateCaptchaRequest.cs  ThemeConfiguration.cs
opencaptcha/src/Captcha.Core/Services/: CaptchaImageService.cs  ICaptchaImageService.cs
opencaptcha/src/Captcha.WebApi/: Captcha.WebApi.csproj  Dockerfile  Program.cs
opencaptcha/src/Captcha.WebApi/Controllers/: CaptchaController.cs  ErrorController.cs
opencaptcha/src/Captcha.WebApi/Controllers/Examples/: CreateCaptchaExamples.cs
opencaptcha/src/Captcha.WebApi/Dependency/: ServiceRegistrations.cs
opencaptcha/tests/Captcha.FunctionalTests/: Captcha.FunctionalTests.csproj  TestConstants.cs
opencaptcha/tests/Captcha.FunctionalTests/Features/: CaptchaGetEndpoint.feature  CaptchaPostEndpoint.feature
opencaptcha/tests/Captcha.FunctionalTests/StepDefinitions/: CaptchaSteps.cs
opencaptcha/tests/Captcha.FunctionalTests/Support/: TestBase.cs
opencaptcha/tests/Captcha.UnitTests/: Captcha.UnitTests.csproj  ConstantsTests.cs
opencaptcha/tests/Captcha.UnitTests/Mappers/: RequestToDomainMapperTests.cs
opencaptcha/tests/Captcha.UnitTests/Models/: ErrorModelTests.cs
opencaptcha/tests/Captcha.UnitTests/Services/: CaptchaImageServiceTests.cs
scripts/: db-restore-latest.sh  host-bootstrap.sh
server/: .dockerignore  CMakeLists.txt  Dockerfile
server/src/: auth.h  jwt_utils.h  main.cpp  main.cpp.backup  metrics.h  send_email.cpp  session.h
server/src/auth/: cookie_auth.hpp  jwt_decode.hpp  jwt_utils_cookie.hpp
sql/: 003_history_paging_index.sql  004_channel_acls.sql  005_messages_soft_delete.sql  init.sql
